# phifd

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: handlers.rs  lib.rs  main.rs  messages.rs  peer.rs  phi.rs
src/actor/: heartbeat.rs  inventory.rs  mod.rs  monitor.rs
static/: index.html
