[package]
name = "phifd"
version = "0.1.0"
authors = ["nikos"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-rt = "1.1"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.2"

tokio = "0.2"
tokio-util = { version = "0.3", features = [ "codec", "udp" ] }
futures = "0.3"
futures-util = "0.3"
bytes = "0.5"

uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

byteorder = "1.3.4"

env_logger = "0.7.1"